// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLink /> shows the correct snapshot tree for the <TextLink> element 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  z-index: 2;
  color: #35c5fc;
  text-decoration: none;
  transition: color 200ms;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
}

<a
  className="css-0"
  href="https://www.turing.io"
  rel="noopener noreferrer"
  target="_blank"
>
  The TextLink
</a>
`;

exports[`<TextLink /> shows the correct snapshot tree for the <TextLink> element with options 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  z-index: 2;
  color: magenta;
  text-decoration: none;
  transition: color 200ms;
  margin-top: 512px;
  font-size: 18px;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
}

<a
  className="css-0"
  color="magenta"
  fontSize={18}
  href="/hello"
  mt={8}
  onClick={[Function]}
>
  The TextLink with options
</a>
`;
